tests/snapshots/snapshots__insert_recurrence_builder_styled.snap
---
source: tests/snapshots.rs
expression: buffer_to_styled(&buf)
---
{fg=#6b7280 bg=#1f232b mod=bold} FILTERS{/}{fg=#c8ccd4 bg=#1f232b}                  {/}{bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}▶{/}{fg=#e07a7a bg=#1f232b}▮{/}{fg=#8aa9c9 bg=#1f232b}◀{/}{bg=#1f232b} {/}{fg=#c8ccd4 bg=#1f232b mod=bold}/tmp/tuxedo-snapshot.txt{/}{fg=#6b7280 bg=#1f232b}  •  15 tas{/}{fg=#6b7280 bg=#1f232b mod=bold} DETAIL{/}{fg=#c8ccd4 bg=#1f232b}                           {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#7fb3a8 bg=#1f232b mod=bold} PROJECTS{/}{fg=#c8ccd4 bg=#1f232b}                 {/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}(2){/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#e07a7a bg=#1a1d23 mod=bold}PRIORITY A{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}──────────────────────{/}{fg=#6b7280 bg=#1f232b} priority  {/}{fg=#e07a7a bg=#1f232b mod=bold}(A){/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+work           {/}{fg=#6b7280 bg=#1f232b}  4{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c8ccd4 bg=#3a4150}  1 {/}{fg=#8aa9c9 bg=#3a4150 mod=bold}▸ {/}{fg=#e07a7a bg=#3a4150 mod=bold}(A) {/}{fg=#c8ccd4 bg=#3a4150}Finish Q2 board deck {/}{fg=#7fb3a8 bg=#3a4150}+work{/}{fg=#c8ccd4 bg=#3a4150} {/}{fg=#c89a6e bg=#3a4150}@la{/}{fg=#6b7280 bg=#1f232b} created   {/}{fg=#c8ccd4 bg=#1f232b}2026-05-01             {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+health         {/}{fg=#6b7280 bg=#1f232b}  3{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#6b7280 bg=#1a1d23}  2 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#e07a7a bg=#1a1d23 mod=bold}(A) {/}{fg=#c8ccd4 bg=#1a1d23}Call dentist to reschedule cle{/}{fg=#6b7280 bg=#1f232b} due       {/}{fg=#c8ccd4 bg=#1f232b}2026-05-06  {/}{fg=#e07a7a bg=#1f232b}today{/}{fg=#c8ccd4 bg=#1f232b}      {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+finance        {/}{fg=#6b7280 bg=#1f232b}  2{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}(3){/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#d4b06a bg=#1a1d23 mod=bold}PRIORITY B{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}──────────────────────{/}{fg=#6b7280 bg=#1f232b} projects  {/}{fg=#7fb3a8 bg=#1f232b}+work{/}{fg=#c8ccd4 bg=#1f232b}                  {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+home           {/}{fg=#6b7280 bg=#1f232b}  1{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#6b7280 bg=#1a1d23}  3 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#d4b06a bg=#1a1d23 mod=bold}(B) {/}{fg=#c8ccd4 bg=#1a1d23}Review pull requests for auth {/}{fg=#6b7280 bg=#1f232b} contexts  {/}{fg=#c89a6e bg=#1f232b}@laptop{/}{fg=#c8ccd4 bg=#1f232b}                {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+learning       {/}{fg=#6b7280 bg=#1f232b}  1{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#6b7280 bg=#1a1d23}  4 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#d4b06a bg=#1a1d23 mod=bold}(B) {/}{fg=#c8ccd4 bg=#1a1d23}Renew passport before summer t{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+personal       {/}{fg=#6b7280 bg=#1f232b}  1{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#6b7280 bg=#1a1d23}  5 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#d4b06a bg=#1a1d23 mod=bold}(B) {/}{fg=#c8ccd4 bg=#1a1d23}Draft hiring rubric for senior{/}{fg=#6b7280 bg=#1f232b mod=bold} RAW{/}{fg=#c8ccd4 bg=#1f232b}                              {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+travel         {/}{fg=#6b7280 bg=#1f232b}  1{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}(2){/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#7aa67a bg=#1a1d23 mod=bold}PRIORITY C{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}──────────────────────{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#6b7280 bg=#1a1d23}  6 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#7aa67a bg=#1a1d23 mod=bold}(C) {/}{fg=#c8ccd4 bg=#1a1d23}Pay quarterly estimated taxes {/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#e07a7a bg=#1f232b mod=bold}(A){/}{fg=#c8ccd4 bg=#1f232b} 2026-05-01 Finish Q2 board   {/}
{fg=#c89a6e bg=#1f232b mod=bold} CONTEXTS{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#7aa67a bg=#1f232b}╭{/}{fg=#8aa9c9 bg=#1f232b mod=bold} ADD TASK {/}{fg=#7aa67a bg=#1f232b}────────────────────────────────────────────────────────────────────╮{/}{fg=#c8ccd4 bg=#1f232b}          {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@errand{/}{fg=#7aa67a bg=#1f232b}│{/}{bg=#1f232b}                                                                              {/}{fg=#7aa67a bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}          {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@home  {/}{fg=#7aa67a bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#8aa9c9 bg=#1f232b mod=bold}› {/}{fg=#c8ccd4 bg=#1f232b}Water the plants {/}{fg=#3c4e51 bg=#1f232b}▐{/}{fg=#7fb3a8 bg=#3c4e51 mod=bold}+home{/}{fg=#3c4e51 bg=#1f232b}▌{/}{fg=#c8ccd4 bg=#1f232b}█{/}{bg=#1f232b}                                                 {/}{fg=#7aa67a bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}          {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@laptop{/}{fg=#7aa67a bg=#1f232b}│{/}{bg=#1f232b}                                                                              {/}{fg=#7aa67a bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}          {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@phone {/}{fg=#7aa67a bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}╭───╮{/}{bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}╭───╮{/}{bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}╭───╮{/}{bg=#1f232b} {/}{fg=#7fb3a8 bg=#1f232b}╭────────╮{/}{bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}╭───╮{/}{bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}╭───╮{/}{bg=#1f232b}                                    {/}{fg=#7aa67a bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}          {/}
{fg=#c8ccd4 bg=#1f232b}          {/}{fg=#7aa67a bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}│ ▦ │{/}{bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}│ ◷ │{/}{bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}│ ↻ │{/}{bg=#1f232b} {/}{fg=#7fb3a8 bg=#1f232b}│{/}{fg=#7fb3a8 bg=#344347 mod=bold} + home {/}{fg=#7fb3a8 bg=#1f232b}│{/}{bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}│ @ │{/}{bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}│ ⚑ │{/}{bg=#1f232b}                                    {/}{fg=#7aa67a bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}          {/}
{fg=#c8ccd4 bg=#1f232b}          {/}{fg=#7aa67a bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}╰───╯{/}{bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}╰───╯{/}{bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}╰───╯{/}{bg=#1f232b} {/}{fg=#7fb3a8 bg=#1f232b}╰────────╯{/}{bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}╰───╯{/}{bg=#1f232b} {/}{fg=#6b7280 bg=#1f232b}╰───╯{/}{bg=#1f232b}                                    {/}{fg=#7aa67a bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}          {/}
{fg=#c8ccd4 bg=#1f232b}          {/}{fg=#7aa67a bg=#1f232b}│{/}{bg=#1f232b}                                                                              {/}{fg=#7aa67a bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}          {/}
{fg=#c8ccd4 bg=#1f232b}          {/}{fg=#7aa67a bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}Tab chips · Ctrl+Z undo detection · Enter add · Esc{/}{bg=#1f232b}                         {/}{fg=#7aa67a bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}          {/}
{fg=#c8ccd4 bg=#1f232b}          {/}{fg=#7aa67a bg=#1f232b}╰──────────────────────────────────────────────────────────────────────────────╯{/}{fg=#c8ccd4 bg=#1f232b}          {/}
{fg=#c8ccd4 bg=#1f232b}              {/}{fg=#2a2f38 bg=#1f232b}╭{/}{fg=#8aa9c9 bg=#1f232b mod=bold} ↻ REPEAT {/}{fg=#2a2f38 bg=#1f232b}────────────────────────────────────────────────╮{/}{fg=#c8ccd4 bg=#1f232b}                          {/}
{fg=#c8ccd4 bg=#1f232b}              {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                          {/}
{fg=#c8ccd4 bg=#1f232b}              {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}every {/}{fg=#c8ccd4 bg=#3a4150 mod=bold} 1 {/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b} day  business {/}{fg=#c8ccd4 bg=#3a4150 mod=bold} week {/}{fg=#6b7280 bg=#1f232b} month  year {/}{bg=#1f232b}           {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                          {/}
{fg=#c8ccd4 bg=#1f232b}              {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                          {/}
{fg=#c8ccd4 bg=#1f232b}              {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}mode  {/}{fg=#c8ccd4 bg=#3a4150 mod=bold} strict {/}{bg=#1f232b} {/}{fg=#c8ccd4 bg=#1f232b} after-complete {/}{bg=#1f232b}       {/}{fg=#6b7280 bg=#1f232b}next: Wed May 13{/}{bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                          {/}
{fg=#c8ccd4 bg=#1f232b}              {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                          {/}
{fg=#c8ccd4 bg=#1f232b}              {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}→ writes {/}{fg=#d4b06a bg=#1f232b mod=bold}rec:+1w{/}{bg=#1f232b}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                          {/}
{fg=#c8ccd4 bg=#1f232b}              {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                          {/}
{fg=#c8ccd4 bg=#1f232b}              {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b mod=bold}jk{/}{fg=#6b7280 bg=#1f232b} field · {/}{fg=#6b7280 bg=#1f232b mod=bold}hl/+-{/}{fg=#6b7280 bg=#1f232b} change · {/}{fg=#6b7280 bg=#1f232b mod=bold}Enter{/}{fg=#6b7280 bg=#1f232b} save · {/}{fg=#6b7280 bg=#1f232b mod=bold}Esc{/}{fg=#6b7280 bg=#1f232b} cancel{/}{bg=#1f232b}       {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                          {/}
{fg=#c8ccd4 bg=#1f232b}              {/}{fg=#2a2f38 bg=#1f232b}╰──────────────────────────────────────────────────────────╯{/}{fg=#c8ccd4 bg=#1f232b}                          {/}
{fg=#1a1d23 bg=#8aa9c9 mod=bold} INSERT {/}{bg=#252a33}  {/}{fg=#a8b0bc bg=#252a33}type naturally: tomorrow, at 6pm, every week, +proj{/}{fg=#6b7280 bg=#252a33}15 open · 2026-05-06 · tuxedo 2026.8.1 {/}
